2005-07-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-music-types.scm (music-descriptions): don't use
	Music_wrapper type.

	* lily/paper-column.cc (print): print moment too.

	* scripts/mup2ly.py (cp_to_dir): remove 1.5.2 compat glue.  
	remove compatibility cruft.

	* lily/parser.yy (score_body): \score can only begin with Music. 

	* lily/score-scheme.cc (LY_DEFINE): rename scorify to
	make-score. Take music argument only. Move parser interaction to
	Scheme.

	* scm/lily-library.scm (scorify-music): new function.

	* python/lilylib.py (datadir): remove 2.1 compat kludge.
	(datadir): remove resource import.
	(print_environment): remove get_bbox()
	(cp_to_dir): remove pre 1.5.2 compat glue.

2005-07-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/simple-spacer.hh (Module): idem.

	* lily/include/spring.hh (struct Spring): store inverse
	strength. This prevents division by zero.

	* lily/include/music.hh (class Music): remove Music::duration_log()

	* lily/stem-engraver.cc (make_stem): take duration log from event.

	* lily/chord-tremolo-engraver.cc: don't ack note-head-interface.

2005-07-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (ly:load): load autochange.scm

	* Documentation/user/tutorial.itely (Running LilyPond for the
	first time): remove reference to DVI/TeX

	* scm/define-markup-commands.scm (text): add \text markup command.

	* configure.in (reloc_b): bump requirement to Python 2.2.

	* lily/include/dots.hh (class Dots): make has_interface() static.

	* python/convertrules.py (conv): add rule for ly:grob-default-font

	* scm/define-grobs.scm (all-grob-descriptions): reorganize in
	alphabetical order.

	* input/regression/trill-spanner-pitched.ly: new file.

	* lily/font-interface-scheme.cc (LY_DEFINE): function
	ly:grob-default-font (changed from get-default-font).

	* lily/axis-group-interface-scheme.cc (LY_DEFINE): new file.

	* lily/note-head.cc (internal_print): if style is not a symbol,
	set style to 'default. 