@@ -1,5 +1,9 @@
 2005-07-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/bezier.cc: hardcode binomial coefficients of order 3.
+
+	* lily/include/music-wrapper.hh: remove Music_wrapper as Music subtype.
+
 	* scm/define-music-types.scm (music-descriptions): don't use
 	Music_wrapper type.
 
